checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__fragments__wrong_fragment_target_intf_intf.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: FragmentConditionNeverMatches {
            condition: "HasLabel",
            scope: "HasLabel",
        },
        additional_info: [
            (
                Pos {
                    line: 32,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "HasLabel",
                },
            ),
            (
                Pos {
                    line: 29,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "HasTitle",
                },
            ),
        ],
    },
]
