checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__fragments__wrong_fragment_target_intf_union.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 13,
            column: 26,
            file: 0,
            builtin: false,
        },
        message: UnknownType {
            name: "UserOrPost",
        },
        additional_info: [],
    },
]
